2004-08-11  Jakub Jelinek  <jakub@redhat.com>

	PR c++/16276
	* output.h (default_function_rodata_section,
	default_no_function_rodata_section): New prototypes.
	* target.h (struct gcc_target): Add asm_out.function_rodata_section.
	* target-def.h (TARGET_ASM_FUNCTION_RODATA_SECTION): Define.
	(TARGET_ASM_OUT): Add it.
	* varasm.c (default_function_rodata_section,
	default_no_function_rodata_section): New functions.
	* final.c (final_scan_insn): Call
	targetm.asm_out.function_rodata_section instead of
	readonly_data_section.
	* config/mcore/mcore.c (TARGET_ASM_FUNCTION_RODATA_SECTION): Define.
	* config/ip2k/ip2k.c (TARGET_ASM_FUNCTION_RODATA_SECTION): Likewise.
	* config/rs6000/xcoff.h (TARGET_ASM_FUNCTION_RODATA_SECTION):
	Likewise.
	* config/alpha/alpha.c (TARGET_ASM_FUNCTION_RODATA_SECTION): Likewise.
	* config/i386/cygming.h (TARGET_ASM_FUNCTION_RODATA_SECTION):
	Likewise.
	* config/i386/i386-interix.h (TARGET_ASM_FUNCTION_RODATA_SECTION):
	Likewise.
	* config/arm/pe.h (TARGET_ASM_FUNCTION_RODATA_SECTION): Likewise.
	* config/avr/avr.c (TARGET_ASM_FUNCTION_RODATA_SECTION): Likewise.
	* doc/tm.texi (TARGET_ASM_FUNCTION_RODATA_SECTION): Document.

2003-05-22  Jeff Law  <law@redhat.com>

	* expr.c (convert_move): Avoid making silly copies.

2004-08-30  Mark Mitchell  <mark@codesourcery.com>

	Revert:
	2004-08-29  Mark Mitchell  <mark@codesourcery.com>
	PR rtl-optimization/16590
	* gcse.c (pre_delete): Do not create invalid REG_EQUAL notes.

2004-08-29  Mark Mitchell  <mark@codesourcery.com>

	PR rtl-optimization/16590
	* gcse.c (pre_delete): Do not create invalid REG_EQUAL notes.

2004-08-26  Richard Henderson  <rth@redhat.com>

        * config/alpha/alpha.h (HARD_REGNO_MODE_OK): Allow complex float
        modes.

2004-08-26  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

	PR target/17119.
	* config/m32r.c (gen_compare): Use reg_or_int16_operand when
	checking for a valid constant, regardless of sign.

2004-08-25  Richard Henderson  <rth@redhat.com>
