@@ -1,8 +1,8 @@
 // Test if a local definition is in a linkonce/comdat section.
 // { dg-do compile }
-// { dg-final { scan-assembler "_ZTIP9CTemplateIhE:" { xfail *-*-* } } }
-// { dg-final { scan-assembler-not ".globl\[ 	\]+_ZTIP9CTemplateIhE" { xfail *-*-* } } }
-// { dg-final { scan-assembler-not ".section\[^\n\r\]*_ZTIP9CTemplateIhE\[^\n\r\]*" { xfail *-*-* } } };
+// { dg-final { scan-assembler "_ZTIP9CTemplateIhE:" } }
+// { dg-final { scan-assembler-not ".globl\[ 	\]+_ZTIP9CTemplateIhE" } }
+// { dg-final { scan-assembler-not ".section\[^\n\r\]*_ZTIP9CTemplateIhE\[^\n\r\]*" } }
 
 
 namespace std
