@@ -1,3 +1,12 @@
+2004-08-18  Jakub Jelinek  <jakub@redhat.com>
+
+	Revert:
+	2004-07-27  Andrew Pinski  <apinski@apple.com>
+	* g++.dg/rtti/tinfo1.C: Correct the xfail.
+
+	2004-07-26  Andrew Pinski  <apinski@apple.com>
+	* g++.dg/rtti/tinfo1.C: Xfail.
+
 2004-08-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/16276
