@@ -1,3 +1,9 @@
+2004-07-07  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR c++/16276
+	* rtti.c (emit_tinfo_decl): Turn off DECL_ONE_ONLY if typeinfo
+	is not public.
+
 2004-08-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/16276
